# ClaudeCodeTelegramBot

./: .env.example  .gitignore  LICENSE  README.md  bot.py  requirements.txt
configs/: gemini-prompts.json
docs/: ARCHITECTURE.md  CHANGELOG.md  COMMANDS.md  NIGHTWATCH_IPC.md  SETUP.md
scripts/: collect-logs.sh.example  deploy-to-prod.sh.example  health-check.sh.example
sentry-nightwatch/: .env.example  .gitignore  CHANGELOG.md  README.md  pyproject.toml  requirements.txt
sentry-nightwatch/app/: analyzer.py  builder.py  collector.py  config.py  main.py  normalizer.py  publisher.py  redactor.py  schema_check.py
sentry-nightwatch/configs/: projects.yml  rules.yml
sentry-nightwatch/docs/: phase-1.5-schema-report.md  phase-3-architecture.md
sentry-nightwatch/incidents/: 2026-04-26-investigation.md
sentry-nightwatch/scripts/: install.sh  prune-snapshots.sh  uninstall.sh
sentry-nightwatch/systemd/: nightwatch-daily.service  nightwatch-daily.timer
sentry-nightwatch/tests/: test_analyzer.py  test_builder.py  test_env_loader.py  test_normalizer.py  test_publisher.py  test_publisher_bridge.py  test_publisher_integration.py  test_redactor.py  test_schema_live.py  test_subprocess_env.py  test_verdict.py
sentry-nightwatch/tests/fixtures/: pii_corpus.json  sentry_event_full.json  sentry_issues_sample.json  sentry_live_redacted_sample.json
systemd/: claude-telegram-bot.service
