[project]
name = "sentry-nightwatch"
version = "0.1.0"
description = "Offline Sentry log analysis pipeline (Phase 1)"
requires-python = ">=3.10"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers -m 'not live'"
filterwarnings = ["ignore::DeprecationWarning"]
markers = [
    "live: makes real HTTP calls to Sentry; skipped unless explicitly selected",
]

[tool.coverage.run]
source = ["app"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
